# receiver/openapi.yml
@@ -1,5 +1,4 @@
 openapi: 3.0.0
-
 info:
   title: Health App API
   description: This API receives reading events from diabetic medical devices
@@ -10,48 +9,81 @@ tags:
 - name: readings
   description: Operations available to diabetic medical device readings
 paths:
-  /stats:
-    get:
-      summary: gets the event stats
-      description: "get new data for in-store sales and online sales stats"
-      operationId: app.get_stats
+  /readings/blood-sugar:
+    post:
+      summary: reports a blood sugar reading
+      description: "Adds a new blood sugar reading to the system"
+      operationId: app.report_blood_sugar_reading
       responses:
-        "200":
-          description: Successfully returned a list of sales events
-          content:
-            application/json:
-              schema:
-                type: object
-                items:
-                  $ref: '#/components/schemas/ReadingStats'
+        "201": 
+          description: item created i.e. success
         "400":
-          description: Invalid request
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
+          description: invalid input, object invalid
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/BloodSugarReadings'
+
+  /readings/cortisol:
+    post:
+      summary: reports a cortisol reading
+      description: "Adds a new cortisol reading to the system"
+      operationId: app.report_cortisol_reading
+      responses:
+        "201": 
+          description: item created i.e. success
+        "400":
+          description: invalid input, object invalid
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CortisolLevelReadings'
+
 components:
   schemas:
-    ReadingStats:
+    BloodSugarReadings:
       required:
-      - num_bs_readings
-      - max_bs_readings
-      - num_cl_readings
-      - max_cl_readings
+        - patient_id
+        - device_id
+        - timestamp
+        - blood_sugar
       type: object
       properties:
-        num_bs_readings:
+        patient_id:
+          type: string
+          format: uuid
+          example: d290f1ee-6c54-4b01-90e6-d701748f0851
+        device_id:
+          type: string
+          example: BS9237
+        blood_sugar:
           type: integer
-          example: 5000
-        max_bs_readings:
+          example: 5
+        timestamp:
+          type: string
+          format: date-time
+          example: '2016-08-29T09:12:33.001Z'
+    CortisolLevelReadings:
+      required:
+        - patient_id
+        - device_id
+        - timestamp
+        - cortisol_level
+      type: object
+      properties:
+        patient_id:
+          type: string
+          format: uuid
+          example: d290f1ee-6c54-4b01-90e6-d701748f0851
+        device_id:
+          type: string
+          example: CL9012
+        cortisol_level:
           type: integer
-          example: 100
-        num_cl_readings:
-          type: integer
-          example: 8000
-        max_cl_readings:
-          type: integer
-          example: 200
+          example: 40
+        timestamp:
+          type: string
+          format: date-time
+          example: '2016-08-29T09:12:33.001Z'
